--- a/Objects/superSecretFiles/index.html
+++ b/Objects/superSecretFiles/index.html
@@ -6,7 +6,9 @@
     <title>test!</title>
   </head>
   <body>
-    <p id="code9">My watch stopped at</p>
+    <h4>Fido!!</h4> <br>
+
+
   </body>
   <script src="script.js" type="text/javascript"></script>
 </html>
