--- a/Advanced Object Construction/date/index.html
+++ b/Advanced Object Construction/date/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Date()</title>
+    <title>Date Constructors</title>
   </head>
   <body>
-
   </body>
   <script src="script.js" type="text/javascript"></script>
 </html>
