--- a/Using Prototypes/instance of/index.html
+++ b/Using Prototypes/instance of/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Robots</title>
+    <title>Instance of Dog</title>
   </head>
   <body>
 
